<resources>
    <string name="app_name">Nutrition Point</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="action_about">About</string>

    <string name="choose_gender">Choose your Gender?</string>
    <string name="male">MALE</string>
    <string name="female">FEMALE</string>
    <string name="start_body_analysis">START BODY ANALYSIS</string>
    <string name="action_language">العربية</string>
    <string name="physical_activity">Physical Activity</string>
    <string name="health_monitor">HEALTH MONITOR</string>
    <string name="your_profile_summary">YOUR PROFILE SUMMARY</string>
    <string name="show_analysis">show Analysis</string>
    <string name="restart_body_analysis">Restart Body Analysis</string>
    <string name="doubleBackToast">Press Back again to Exit</string>
    <string name="healthy_recipes">Healthy Recipes</string>


    <string name="notification_text"> reminder to drink a cup of water</string>
    <string name="notification_string">Water Reminder</string>
    <string name="reminders_title">Reminders</string>
    <string name="years">Years</string>
    <string name="kg">kg</string>
    <string name="Male">Male</string>
    <string name="Female">Female</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="age">AGE</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="analyze_data">Analyze Data</string>
</resources>
