<?xml version="1.0" encoding="utf-8"?>
<android.widget.RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:clickable="true"
    android:focusable="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/ageTV"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/age"
                android:textColor="@android:color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <NumberPicker
                android:id="@+id/numberPicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:descendantFocusability="blocksDescendants"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="108dp"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editText1"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_gravity="center_vertical"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/weight"
                android:inputType="number"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editText2"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_gravity="center_vertical"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/height"
                android:inputType="number"
                android:textSize="24sp"
                android:textStyle="bold" />
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="150dp">

            <Button
                android:id="@+id/button"
                android:layout_width="169dp"
                android:layout_height="66dp"
                android:layout_gravity="center"
                android:background="@drawable/animation_button"
                android:gravity="center"
                android:text="@string/analyze_data"
                android:textColor="@color/colorWhite"
                android:textSize="18sp"
                android:textStyle="bold" />
        </FrameLayout>

    </LinearLayout>
</android.widget.RelativeLayout>